# rust-stockcli

./: Cargo.toml  license  readme.md
src/: main.rs
